# MashIA

./: .gitignore  README.md  _conversations_device.json  build.gradle.kts  gradle.properties  gradlew.bat  settings.gradle.kts  uidump.xml  uidump_device.xml
app/: build.gradle.kts  google-services.json.example  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: emoji_list.txt
app/src/main/assets/models/: README.txt
app/src/main/cpp/: CMakeLists.txt  WhisperBridge.cpp
app/src/main/java/com/rophiroth/mashia/: MainActivity.kt
app/src/main/java/com/rophiroth/mashia/ui/: AuthActivity.kt  ChatFragment.kt  LibraryFragment.kt  SettingsFragment.kt
app/src/main/java/org/psyhackers/mashia/: App.kt  MainActivity.kt
app/src/main/java/org/psyhackers/mashia/asr/: AsrEngine.kt  CloudAsr.kt  WhisperAsr.kt
app/src/main/java/org/psyhackers/mashia/stt/: MicRecorder.kt  WhisperEngine.kt
app/src/main/java/org/psyhackers/mashia/tts/: TtsPlayer.kt
app/src/main/java/org/psyhackers/mashia/ui/: AuthActivity.kt  ChatFragment.kt  ChatHistoryStore.kt  DebugFragment.kt  (+6 more)
app/src/main/res/drawable/: bg_auth.xml  bg_btn.xml  bg_bubble_me.xml  bg_mic.xml  bg_search_row.xml  ic_launcher_foreground.xml  ic_mic.xml
app/src/main/res/layout/: activity_auth.xml  activity_library_full.xml  activity_main.xml  activity_tts_voice_picker.xml  dialog_color_picker.xml  dialog_icon_picker.xml  fragment_chat.xml  fragment_debug.xml  fragment_library.xml  fragment_settings.xml  item_chat_tab.xml  item_color_swatch.xml  item_folder_grid.xml  item_folder_tree.xml  item_icon_tile.xml  item_message.xml  item_project.xml  item_project_grid.xml  item_tts_voice.xml  nav_header.xml  toolbar_chat.xml
app/src/main/res/menu/: bottom_nav_menu.xml  drawer_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: arrays.xml  colors.xml  ic_launcher_colors.xml  strings.xml  strings.xml.blank  themes.xml
gradle/wrapper/: gradle-wrapper.properties
server/: index.js  package-lock.json  package.json
(+4 files in other folders)
